Added the column YoY_Output

--- a/Stats.ipynb
+++ b/Stats.ipynb
@@ -474,7 +474,22 @@
    "id": "818a25ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Set the empty sting values in the column data['GOP_Year2'] to 0\n",
+    "data.loc[data['GOP_Year2'] == ' ', 'GOP_Year2'] = 0 \n",
+    "\n",
+    "#Convert the column type to float\n",
+    "data['GOP_Year2'] = data['GOP_Year2'].astype('float')\n",
+    "\n",
+    "\n",
+    "#Derive the new column YoY Output\n",
+    "data['YoY_Output'] = round((data['GOP_Year3']-data['GOP_Year2'])/data['GOP_Year2']*100,2)\n",
+    "\n",
+    "#Handling the inf values\n",
+    "data.loc[~np.isfinite(data['YoY_Output']), 'YoY_Output'] = np.nan\n",
+    "\n",
+    "data['YoY_Output'].describe()"
+   ]
   }
  ],
  "metadata": {
